--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="text">Music Bot Free Tier [ GlaceYT ]</div>
+        <div class="text">Thien Nhan Bot [ ntnhwn ]</div>
     </div>
 </body>
 </html>
